@@ -5,7 +5,7 @@ import Hello from '@/pages/Hello'
 import LearnComponent from '@/pages/LearnComponent'
 import Count from '@/pages/Count'
 import C2F from '@/pages/C2F'
-
+import TodoList from '@/pages/TodoList'
 Vue.use(Router)
 
 export default new Router({
@@ -34,6 +34,11 @@ export default new Router({
       path: '/Count',
       name: 'Count',
       component: Count
+    },
+    {
+      path: '/TodoList',
+      name: 'TodoList',
+      component: TodoList
     }
   ]
 })
