@@ -2,3 +2,8 @@ export const INCREASE = 'INCREASE';
 export const DECREASE = 'DECREASE';
 export const MULTIPLICATION = 'MULTIPLICATION';
 export const RESET = 'RESET';
+
+export const ADDTODO = 'ADDTODO';
+export const UPDATETODO = 'UPDATETODO';
+export const TOGGLETODO = 'TOGGLETODO';
+export const DELETETODO = 'DELETETODO';
